--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "scripts": {
     "android:build": "react-native run-android",
     "ios:build": "react-native run-ios",
-    "start": "react-native start"
+    "start": "react-native start",
+    "detox:e2e:ios-debug": "DETOX_CONFIGURATION=ios.sim.debug npx cucumber-js",
+    "detox:build:ios-debug": "detox build --configuration ios.sim.debug",
+    "detox:build:ios-release": "detox build --configuration ios.sim.release",
+    "detox:e2e:ios-release": "DETOX_CONFIGURATION=ios.sim.release npx cucumber-js",
+    "detox:build:android-debug": "detox build --configuration android.emu.debug",
+    "detox:e2e:android-debug": "DETOX_CONFIGURATION=android.emu.debug npx cucumber-js",
+    "detox:build:android-release": "detox build --configuration android.emu.release",
+    "detox:e2e:android-release": "DETOX_CONFIGURATION=android.emu.debug npx cucumber-js"
   },
   "dependencies": {
     "@react-native-community/async-storage": "1.12.1",
@@ -36,8 +44,11 @@
     "@babel/core": "7.21.3",
     "@babel/plugin-transform-react-jsx-source": "7.19.6",
     "@babel/preset-env": "7.20.2",
+    "@babel/register": "^7.22.15",
     "@babel/runtime": "7.21.0",
+    "@cucumber/cucumber": "^9.5.1",
     "babel-jest": "29.2.1",
+    "detox": "^20.11.4",
     "eslint": "8.19.0",
     "jest": "29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
